--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   </head>
   <body>
     <div id="content">
+      <h1>Vaflo</h1>
       <p id="message" style="display: block">Ŝarĝado…</p>
       <div id="game-grid" style="display: none"></div>
     </div>
