wasm_game: Show the remaining number of swaps

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
     <div id="content">
       <h1>Vaflo</h1>
       <p id="message" style="display: block">Ŝarĝado…</p>
-      <div id="game-grid" style="display: none"></div>
+      <div id="game-contents" style="display: none">
+        <div id="game-grid"></div>
+        <div id="swaps-remaining"></div>
+      </div>
     </div>
   </body>
 </html>
