wasm_game: Show the statistics

--- a/index.html
+++ b/index.html
@@ -34,6 +34,37 @@
       <div id="game-contents" style="display: none">
         <div id="game-grid"></div>
         <div id="swaps-remaining"></div>
+        <div id="statistics" style="display: none">
+          <h2>Statistikoj</h2>
+          <table>
+            <tr>
+              <th scope="row">Luditaj</th>
+              <td id="stats-played"></td>
+            </tr>
+            <tr>
+              <th scope="row">Sumaj steloj</th>
+              <td id="stats-total-stars"></td>
+            </tr>
+            <tr>
+              <th scope="row">Aktuala serio</th>
+              <td id="stats-current-streak"></td>
+            </tr>
+            <tr>
+              <th scope="row">Plej bona serio</th>
+              <td id="stats-best-streak"></td>
+            </tr>
+          </table>
+          <h2>Distribuo de steloj</h2>
+          <table>
+            <tr><th scope="row">X</th><td id="stats-fail-count"></td></tr>
+            <tr><th scope="row">0⭐</th><td id="stats-0-stars"></td></tr>
+            <tr><th scope="row">1⭐</th><td id="stats-1-stars"></td></tr>
+            <tr><th scope="row">2⭐</th><td id="stats-2-stars"></td></tr>
+            <tr><th scope="row">3⭐</th><td id="stats-3-stars"></td></tr>
+            <tr><th scope="row">4⭐</th><td id="stats-4-stars"></td></tr>
+            <tr><th scope="row">5⭐</th><td id="stats-5-stars"></td></tr>
+          </table>
+        </div>
       </div>
     </div>
   </body>
