web: Remove unnecessary slash in <meta> element

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <html lang="eo">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Ludu ĉiutagan vortan ludon en Esperanto.">
     <title>Vaflo</title>
