wasm_game: Put today’s puzzle number in the title

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div id="content">
-      <h1>Vaflo</h1>
+      <h1 id="title">Vaflo</h1>
       <p id="message" style="display: block">Ŝarĝado…</p>
       <div id="game-contents" style="display: none">
         <div id="game-grid"></div>
