wasm_game: Add a share button

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <div id="game-contents" style="display: none">
         <div id="game-grid"></div>
         <div id="swaps-remaining"></div>
+        <div id="share-button" style="display: none">
+          <button>Kunhavigi</button>
+        </div>
         <div id="statistics" style="display: none">
           <h2>Statistikoj</h2>
           <table>
