--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
       <div id="game-contents" style="display: none">
         <div id="game-grid"></div>
         <div id="swaps-remaining"></div>
-        <div id="share-button" style="display: none">
-          <button>Kunhavigi</button>
-        </div>
+        <button id="share-button" style="display: none">Kunhavigi</button>
         <div id="statistics" style="display: none">
           <h2>Statistikoj</h2>
           <table>
