wasm_game: Use “gajnvico” instead of “serio”

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
               <td id="stats-total-stars"></td>
             </tr>
             <tr>
-              <th scope="row">Aktuala serio</th>
+              <th scope="row">Aktuala gajnvico</th>
               <td id="stats-current-streak"></td>
             </tr>
             <tr>
-              <th scope="row">Plej bona serio</th>
+              <th scope="row">Plej bona gajnvico</th>
               <td id="stats-best-streak"></td>
             </tr>
           </table>
