Add a button to donate via Liberapay

--- a/index.html
+++ b/index.html
@@ -65,6 +65,20 @@
             <tr><th scope="row">4⭐</th><td id="stats-4-stars"></td></tr>
             <tr><th scope="row">5⭐</th><td id="stats-5-stars"></td></tr>
           </table>
+          <p>
+            Vaflo estas senpaga kaj libera programo. La fontokodo
+            estas havebla
+            ĉe <a href="https://github.com/bpeel/vaflo">Github</a>. Se
+            vi volas kaj povas donaci por subteni la daŭripovon de la
+            retpaĝo, tio eblas
+            ĉe <a href="https://eo.liberapay.com/bpeel/donate">Liberapay</a>.
+            Dankon!
+          </p>
+          <p>
+            <a href="https://eo.liberapay.com/bpeel/donate">
+              <img alt="Donaci per Liberapay" src="donaci.svg">
+            </a>
+          </p>
         </div>
       </div>
     </div>
