Fix the link to the Github branch

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <p>
             Shawffle is free and open source. The source code is
             available on
-            <a href="https://github.com/bpeel/vaflo?shavian">Github</a>.
+            <a href="https://github.com/bpeel/vaflo/tree/shavian">Github</a>.
             If you have some money to spare and want to support the
             site, you can make a donation with
             <a href="https://eo.liberapay.com/bpeel/donate">Liberapay</a>.
