Fix the link to Liberapay

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <a href="https://github.com/bpeel/vaflo/tree/shavian">Github</a>.
             If you have some money to spare and want to support the
             site, you can make a donation with
-            <a href="https://eo.liberapay.com/bpeel/donate">Liberapay</a>.
+            <a href="https://en.liberapay.com/bpeel/donate">Liberapay</a>.
             𐑔𐑨𐑙𐑒 𐑿!
           </p>
           <p>
