Small tweak to the web site text

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             Le Jeu de gaufre est gratuit et c’est du logiciel libre. Le
             code source est disponible
             sur <a href="https://github.com/bpeel/vaflo/tree/french">Github</a>.
-            Si vous voulez et vous avez la possibilité, vous pouvez
+            Si vous voulez et en avez la possibilité, vous pouvez
             faire un don pour soutenir le développement du site
             avec <a href="https://fr.liberapay.com/bpeel/donate">Liberapay</a>.
             Merci !
