index: Typo: ŝarĝado -> ŝargado

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                    -0.139,0.788 -0.046,0.464 -0.046,1.267 z" />
         </svg>
       </div>
-      <p id="message" style="display: block">Ŝarĝado…</p>
+      <p id="message" style="display: block">Ŝargado…</p>
       <div id="game-contents" style="display: none">
         <div id="game-grid"></div>
         <div id="swaps-remaining"></div>
